# DataScience

./: README.md
PowerBI/: Elegant Sales Report.pbix  financeiro.pbix
PowerBI/Desafio_ETL/: ETL_Analysis_DIO_Rosane.pbix  README.md  azure_company.sql  company.xlsx
PowerBI/StarSchema/: README.MD  Real State Star Schema.md  Real_State.sql
PowerBI/StarSchema-F_Sale/: README.md  SchemaStar.pbix
Python/: ArquivoXML.ipynb  CSV_TXT.ipynb  Integra_Word.ipynb  Leitura Arquivos do Computador 01.ipynb
Python/Codigo/: Banking.ipynb  Banking_app_01.ipynb  Calculadora1.py  Calculadora2.py  Datas.py  Televisao.py  analise_Seaborn.ipynb  arquivos.py  conjunto.py  contador_letras.py  excecao.py  excecaopersonalizada.py  ifelse.py  importacao.py  lambda.py  lista_tupla.py  notas.txt  pacotesrequests.py  projeto_Covid19.ipynb  repeticao.py
Python/Codigo/Api-Twitter-Python-main/: README.md  pyproject.toml
Python/Codigo/ChatGPT/: API_Python_ETL_ChatGPT.ipynb  SDW2023.csv
Python/Codigo/Desafio_Banking_POO/: Banking_app_POO.ipynb
Python/Codigo/Flask_JSON/: Flask_DJSON_API.ipynb  README.md
Python/Codigo/SQL_NoSQL/: Banking_MongoDB.ipynb  README.md  SQLiteAlchemy_bank.ipynb
Python/Codigo/schedule/: db.sqlite3
Python/Codigo/schedule/core/: admin.py  models.py  views.py
Python/RestAPI-token_authentication-project_Rosane/: db.sqlite3
Python/RestAPI-token_authentication-project_Rosane/netflix_dio/: settings.py
image-processing-master/: README.md  setup.py
image-processing-master/image_processing/: combination.py  transformation.py
image-processing-master/utils/: io.py
(+21 files in other folders)
