[tool.poetry]
name = "api-twitter-python"
version = "1.0.0"
description = "API Twitter with Python"
authors = ["Rosane Ribeiro"]
readme = "README.md"
packages = [{include = "api_twitter_python"}]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.12.1"
pymongo = "^4.3.3"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.8b0"
isort = "^5.9.3"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
